tests/type_errors/list_element_type_mismatch.nos
# expect_error: type mismatch
# Test: List with wrong element type passed to function

sumList(xs: List[Int]) = xs.fold(0, (acc, x) => acc + x)

main() = sumList(["a", "b", "c"])
